c2prj1_cards/grade.txt
Grading at Mon Dec 23 10:09:07 UTC 2019
Compiling cards.c
cards.c: In function ‘card_from_num’:
cards.c:106:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(c=0 ){
     ^
cards.c:109:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   }else if(c=13 ){
   ^
cards.c:112:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   }else if (c=26){
   ^
cards.c:115:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   }else if (c=39){
   ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
